--- a/index.html
+++ b/index.html
@@ -1,39 +1,38 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<meta title="faceday">
-		<style type="text/css">
-		
-		#content{
-			width:600px;
-			margin:50px auto;
-			font-family: Helvetica, Arial;	
-			text-align: center;		
-		}
-		#bookmarklet{
-			display:block;
-			width:200px;
-			height:40px;		
-			margin:0 auto 30px auto;
-			border-radius: 10px;
-			padding-top:20px;
-			background: #31dfff;
-			color:#fff;
-		}
-		a{
-			color:#31dfff;
-			text-decoration: none;
-		}
-		#logo{
-			width:100px;
-			margin:0 auto;
-			display:block;
-			margin-top:30px;
-		}
-		#small{
-			font-size: 11px;
-			margin-top:30px;
-		}
+		<title>faceday!</title>
+		<style type="text/css">		
+			#content{
+				width:600px;
+				margin:50px auto;
+				font-family: Helvetica, Arial;	
+				text-align: center;		
+			}
+			#bookmarklet{
+				display:block;
+				width:200px;
+				height:40px;		
+				margin:0 auto 30px auto;
+				border-radius: 10px;
+				padding-top:20px;
+				background: #31dfff;
+				color:#fff;
+			}
+			a{
+				color:#31dfff;
+				text-decoration: none;
+			}
+			#logo{
+				width:100px;
+				margin:0 auto;
+				display:block;
+				margin-top:30px;
+			}
+			#small{
+				font-size: 11px;
+				margin-top:30px;
+			}
 		</style>
 	</head>
 	<body>
