fix link to facespaces

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<div id="content">
 			<a id="bookmarklet" href="javascript:(function() {var days = ['sunday','monday','tuesday','wednesday','thursday','friday','saturday'];Date.prototype.getDayName = function() {return days[ this.getDay() ];};})();var now = new Date();var day = now.getDayName();window.location='http://facespac.es/c/'+ day;">faceday!</a>
 			<p>Faceday takes you to the <a href="http://facespac.es">facespac.es</a> channel for the day of the week!<br/>Drag faceday to your bookmarks bar and click it every day at midnight and beyond!</p>
-			<a href="http://facespa.ces"><img src="facespaces-logo.png" id="logo"/></a>
+			<a href="http://facespac.es"><img src="facespaces-logo.png" id="logo"/></a>
 			<p id="small">faceday is brought to you by<br/><a href="http://twitter.com/lauradegroot">@lauradegroot</a> and hosted by <a href="http://twitter.com/taotetek">@taotetek</a><br/><br/><a href="https://twitter.com/adcadien">@adcadien</a> says he thought of this 4 days before me and only told Bryce and didn't do anything about it. 50% credit goes to him.</p>
 		</div>
 	</body>
